@@ -1,5 +1,8 @@
 2008-09-22  Tomas Cerha  <cerha@brailcom.org>
 
+	* pytis/web/form.py: 
+	Added support for `ListView' found record highlighting.
+
 	* pytis/data/data.py:
 	* pytis/form/application.py:
 	* pytis/form/commands_.py:
